--- a/src-frontend/index.html
+++ b/src-frontend/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Xyf6h5bzDpqwD1t2BQ65jvlviHQCEKM&callback=initMap"></script>
 </head>
 <body>
   <app-root></app-root>
